--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Tiện Ích Của Trịnh Hg - Ultimate V18 (Full Unlocked)</title>
+  <title>Tiện Ích Của Trịnh Hg - V19 (Final Optimized)</title>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="index.css">
 </head>
@@ -41,8 +41,8 @@
              </div>
              <button id="add-mode" class="btn btn-primary">+ Mới</button>
              <button id="copy-mode" class="btn btn-secondary">Sao Chép</button>
-             <button id="rename-mode" class="btn btn-warning hidden">Đổi Tên</button>
-             <button id="delete-mode" class="btn btn-danger hidden">Xóa</button>
+             <button id="rename-mode" class="btn btn-warning">Đổi Tên</button>
+             <button id="delete-mode" class="btn btn-danger">Xóa</button>
           </div>
         </div>
 
@@ -53,8 +53,8 @@
             <button id="auto-caps" class="btn btn-toggle">Auto Caps: Tắt</button>
           </div>
           <div class="toolbar-group">
-            <button id="import-settings" class="btn btn-outline">Nhập CSV</button>
-            <button id="export-settings" class="btn btn-outline">Xuất CSV</button>
+            <button id="import-settings" class="btn btn-purple">Nhập CSV (3 cột)</button>
+            <button id="export-settings" class="btn btn-purple">Xuất CSV (3 cột)</button>
           </div>
         </div>
 
@@ -63,16 +63,7 @@
                 <label>Ngoại lệ Auto Caps (ngăn cách bằng dấu phẩy):</label>
                 <input type="text" id="caps-exception" placeholder="Ví dụ: jpg, png, com, vn (Những từ này sẽ không bị viết hoa sau dấu chấm)">
             </div>
-            <div class="setting-block cleaner-block">
-                <label>Bộ Lọc Rác (Cleaner):</label>
-                <div class="cleaner-controls">
-                    <label class="checkbox-label">
-                        <input type="checkbox" id="smart-spacing"> Tự động giãn dòng (Giữ 1 dòng trống giữa các đoạn)
-                    </label>
-                    <button id="clean-lines-btn" class="btn btn-secondary btn-sm">Xóa dòng trắng thừa ngay</button>
-                </div>
             </div>
-        </div>
 
         <div class="list-actions">
            <button id="add-pair" class="btn btn-success icon-btn">Thêm cặp mới</button>
@@ -93,7 +84,7 @@
             <span>Văn bản gốc</span>
             <span id="input-word-count" class="badge">Words: 0</span>
           </div>
-          <textarea id="input-text" class="custom-scrollbar" placeholder="Dán văn bản cần xử lý vào đây... (Không giới hạn ký tự)"></textarea>
+          <textarea id="input-text" class="custom-scrollbar" placeholder="Dán văn bản cần xử lý vào đây..."></textarea>
           <div class="pane-footer">
             <button id="replace-button" class="btn btn-primary full-width">THỰC HIỆN THAY THẾ</button>
           </div>
@@ -105,9 +96,8 @@
             <span id="output-word-count" class="badge">Words: 0</span>
           </div>
           <div id="output-text" class="custom-scrollbar output-div" contenteditable="false" data-placeholder="Kết quả sẽ hiện ra ở đây..."></div>
-          <div class="pane-footer footer-grid">
-            <button id="copy-button" class="btn btn-success">Sao chép (Giữ màu)</button>
-            <button id="copy-clean-button" class="btn btn-outline">Sao chép Clean (Bỏ màu)</button>
+          <div class="pane-footer">
+            <button id="copy-button" class="btn btn-success full-width">Sao chép văn bản (Text Only)</button>
           </div>
         </div>
       </div>
@@ -127,6 +117,10 @@
             <button class="split-mode-btn" data-split="3">3</button>
             <button class="split-mode-btn" data-split="4">4</button>
             <button class="split-mode-btn" data-split="5">5</button>
+            <button class="split-mode-btn" data-split="6">6</button>
+            <button class="split-mode-btn" data-split="7">7</button>
+            <button class="split-mode-btn" data-split="8">8</button>
+            <button class="split-mode-btn" data-split="9">9</button>
             <button class="split-mode-btn" data-split="10">10</button>
             </div>
         </div>
@@ -134,7 +128,7 @@
         <div id="split-type-regex" class="split-sub-controls hidden">
             <label>Regex nhận diện:</label>
             <input type="text" id="split-regex-input" value="^(Chương|Chapter|Hồi)\s+\d+[:.]?" placeholder="VD: ^Chương \d+">
-            <span class="hint">Tìm các dòng bắt đầu bằng Chương X, Chapter Y...</span>
+            <span class="hint">Tìm dòng bắt đầu bằng Chương X...</span>
         </div>
       </div>
 
@@ -155,11 +149,6 @@
 
   </main>
   
-  <div id="loading-overlay" class="hidden">
-      <div class="spinner"></div>
-      <div id="loading-text">Đang xử lý...</div>
-  </div>
-
   <div id="notification-container"></div>
   <script src="index.js"></script>
 </body>
