--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Tiện Ích Của Trịnh Hg - V19 (Final Optimized)</title>
+  <title>Tiện Ích Của Trịnh Hg - V20 (Fixed & Smooth)</title>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="index.css">
 </head>
@@ -53,8 +53,8 @@
             <button id="auto-caps" class="btn btn-toggle">Auto Caps: Tắt</button>
           </div>
           <div class="toolbar-group">
-            <button id="import-settings" class="btn btn-purple">Nhập CSV (3 cột)</button>
-            <button id="export-settings" class="btn btn-purple">Xuất CSV (3 cột)</button>
+            <button id="import-settings" class="btn btn-toggle purple">Nhập CSV (3 cột)</button>
+            <button id="export-settings" class="btn btn-toggle purple">Xuất CSV (3 cột)</button>
           </div>
         </div>
 
@@ -63,7 +63,7 @@
                 <label>Ngoại lệ Auto Caps (ngăn cách bằng dấu phẩy):</label>
                 <input type="text" id="caps-exception" placeholder="Ví dụ: jpg, png, com, vn (Những từ này sẽ không bị viết hoa sau dấu chấm)">
             </div>
-            </div>
+        </div>
 
         <div class="list-actions">
            <button id="add-pair" class="btn btn-success icon-btn">Thêm cặp mới</button>
