--- a/index.html
+++ b/index.html
@@ -2,22 +2,14 @@
 <html lang="vi">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Tiện Ích - FREE VERSION</title>
+  <title>Tiện Ích Trịnh Hg - FREE</title>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="index.css">
   <script>const IS_VIP = false;</script>
 </head>
 <body>
-  
   <header class="app-header">
-    <div class="header-left">
-      <h1>Tiện Ích Của Trịnh Hg</h1>
-      <div class="donate-info">
-        <span class="donate-label">DON@TE:</span>
-        <span class="donate-details">MB BANK - TRINH THI XUAN HUONG – 0917678211</span>
-      </div>
-    </div>
+    <div class="header-left"><h1>Tiện Ích Của Trịnh Hg</h1></div>
     <div class="header-center">
       <nav class="tabs">
         <button class="tab-button active" data-tab="settings">Cài Đặt</button>
@@ -26,29 +18,48 @@
       </nav>
     </div>
     <div class="header-right">
-       <form action="/login" method="POST" class="login-area">
-          <input type="password" name="secret_key" class="login-input" placeholder="Nhập Key VIP..." required>
-          <button type="submit" class="btn btn-primary btn-sm">Kích hoạt</button>
-       </form>
+       <button id="buy-key-btn" class="btn btn-warning btn-sm">Mua KEY</button>
+       <a href="/login" class="btn btn-primary btn-sm" style="text-decoration:none;">Kích hoạt</a>
     </div>
   </header>
 
+  <div id="buy-key-modal" class="modal-overlay">
+      <div class="modal-box">
+          <button class="modal-close">×</button>
+          <h2 style="text-align:center; margin-top:0;">Bảng Giá Key VIP</h2>
+          <div class="pricing-grid">
+              <div class="price-card">
+                  <span class="price-title">CÁ NHÂN</span>
+                  <p class="price-val">15k / 1 Tuần</p>
+                  <p class="price-val">40k / 1 Tháng</p>
+                  <span class="price-note">Tối đa 2 thiết bị</span>
+              </div>
+              <div class="price-card team">
+                  <span class="price-title">ĐỘI NHÓM</span>
+                  <p class="price-val">30k / 1 Tuần</p>
+                  <p class="price-val">80k / 1 Tháng</p>
+                  <span class="price-note">Tối đa 15 thiết bị</span>
+              </div>
+          </div>
+          <p style="text-align:center; font-size:12px; color:#666;">(Trên 15 thành viên vui lòng liên hệ Admin để giữ nguyên giá)</p>
+          <div class="buy-actions">
+              <a href="https://www.facebook.com/trinh.hg.57" target="_blank" class="btn-fb">Liên hệ Facebook</a>
+              <a href="https://t.me/trinhhg57" target="_blank" class="btn-tele">Liên hệ Telegram</a>
+          </div>
+      </div>
+  </div>
+
   <main class="app-body">
-    
     <div id="settings" class="tab-content active">
       <div class="panel-container">
-        
         <div class="panel-header">
           <h2>Quản Lý Cặp Thay Thế</h2>
           <div class="mode-actions">
-             <div class="select-wrapper">
-                <label>Chế độ:</label>
-                <select id="mode-select"></select>
-             </div>
-             <div class="locked-wrapper"><div class="locked-overlay">VIP</div><button id="add-mode" class="btn btn-primary locked-feature">+ Mới</button></div>
-             <div class="locked-wrapper"><div class="locked-overlay">VIP</div><button id="copy-mode" class="btn btn-secondary locked-feature">Sao Chép</button></div>
-             <div class="locked-wrapper"><div class="locked-overlay">VIP</div><button id="rename-mode" class="btn btn-warning locked-feature">Đổi Tên</button></div>
-             <div class="locked-wrapper"><div class="locked-overlay">VIP</div><button id="delete-mode" class="btn btn-danger locked-feature">Xóa</button></div>
+             <div class="select-wrapper"><label>Chế độ:</label><select id="mode-select"></select></div>
+             <div class="locked-wrapper"><div class="locked-overlay">VIP</div><button id="add-mode" class="btn btn-modern btn-modern-primary locked-feature">+ Mới</button></div>
+             <div class="locked-wrapper"><div class="locked-overlay">VIP</div><button id="copy-mode" class="btn btn-modern btn-modern-secondary locked-feature">Sao Chép</button></div>
+             <button id="rename-mode" class="btn btn-modern btn-modern-warning">Đổi Tên</button>
+             <button id="delete-mode" class="btn btn-modern btn-modern-danger">Xóa</button>
           </div>
         </div>
 
@@ -59,30 +70,21 @@
             <button id="auto-caps" class="btn btn-toggle">Auto Caps: Tắt</button>
           </div>
           <div class="toolbar-group">
-             <div class="locked-wrapper"><div class="locked-overlay">VIP</div><button id="import-settings" class="btn btn-toggle purple locked-feature">Nhập CSV</button></div>
-             <div class="locked-wrapper"><div class="locked-overlay">VIP</div><button id="export-settings" class="btn btn-toggle purple locked-feature">Xuất CSV</button></div>
+             <div class="locked-wrapper"><div class="locked-overlay">VIP</div><button id="import-settings" class="btn btn-modern btn-modern-purple locked-feature">Nhập CSV</button></div>
+             <div class="locked-wrapper"><div class="locked-overlay">VIP</div><button id="export-settings" class="btn btn-modern btn-modern-purple locked-feature">Xuất CSV</button></div>
           </div>
         </div>
-
         <div class="advanced-settings">
             <div class="setting-block">
                 <label>Ngoại lệ Auto Caps:</label>
-                <div class="input-with-btn">
-                    <input type="text" id="caps-exception" placeholder="Ví dụ: jpg, png...">
-                    <button id="save-exception-btn" class="btn btn-primary btn-sm">Lưu</button>
-                </div>
+                <div class="input-with-btn"><input type="text" id="caps-exception" placeholder=""><button id="save-exception-btn" class="btn btn-modern btn-modern-primary">Lưu</button></div>
             </div>
         </div>
-
         <div class="list-actions">
-           <button id="add-pair" class="btn btn-success icon-btn">Thêm cặp mới</button>
-           <button id="save-settings" class="btn btn-primary icon-btn">Lưu tất cả</button>
+           <button id="add-pair" class="btn btn-modern btn-modern-primary icon-btn">Thêm cặp mới</button>
+           <button id="save-settings" class="btn btn-modern btn-modern-primary icon-btn">Lưu tất cả</button>
         </div>
-
-        <div class="scroll-area">
-          <div id="punctuation-list"></div>
-          <div id="empty-state" class="empty-message hidden">Chưa có cặp thay thế nào.</div>
-        </div>
+        <div class="scroll-area"><div id="punctuation-list"></div><div id="empty-state" class="hidden">Chưa có cặp thay thế nào.</div></div>
       </div>
     </div>
 
@@ -90,28 +92,19 @@
       <div class="split-pane">
         <div class="pane input-pane">
           <div class="pane-header">
-            <span>Văn bản gốc (Max 2000 từ)</span>
+            <span>Văn bản gốc <span class="limit-label">(Max 2000 từ)</span></span>
             <span id="input-word-count" class="badge">Words: 0</span>
           </div>
           <textarea id="input-text" class="custom-scrollbar" placeholder="Dán văn bản cần xử lý vào đây..."></textarea>
-          <div class="pane-footer">
-            <button id="replace-button" class="btn btn-primary full-width">THỰC HIỆN THAY THẾ</button>
-          </div>
+          <div class="pane-footer"><button id="replace-button" class="btn btn-primary full-width">THỰC HIỆN THAY THẾ</button></div>
         </div>
-
         <div class="pane output-pane">
           <div class="pane-header">
             <span>Kết quả</span>
-            <div class="counters-group">
-                <span id="count-replace" class="badge badge-yellow">Replace: 0</span>
-                <span id="count-caps" class="badge badge-blue">Auto-Caps: 0</span>
-                <span id="output-word-count" class="badge">Words: 0</span>
-            </div>
+            <div class="counters-group"><span id="count-replace" class="badge badge-yellow">Replace: 0</span><span id="count-caps" class="badge badge-blue">Auto-Caps: 0</span><span id="output-word-count" class="badge">Words: 0</span></div>
           </div>
           <div id="output-text" class="custom-scrollbar output-div" contenteditable="false" data-placeholder="..."></div>
-          <div class="pane-footer">
-            <button id="copy-button" class="btn btn-success full-width">Sao chép văn bản</button>
-          </div>
+          <div class="pane-footer"><button id="copy-button" class="btn btn-success full-width">Sao chép văn bản</button></div>
         </div>
       </div>
     </div>
@@ -122,38 +115,32 @@
             <label><input type="radio" name="split-type" value="count" checked> Chia theo số phần</label>
             <div class="locked-wrapper"><div class="locked-overlay">VIP</div><label class="locked-feature"><input type="radio" name="split-type" value="regex" disabled> Chia theo Chương (Regex)</label></div>
         </div>
-
         <div id="split-type-count" class="split-sub-controls">
-            <label>Số phần (Max 3):</label>
+            <label>Số phần:</label>
             <div class="split-buttons-group">
-            <button class="split-mode-btn active" data-split="2">2</button>
-            <button class="split-mode-btn" data-split="3">3</button>
-            <div class="locked-wrapper"><button class="split-mode-btn locked-feature" data-split="4">4</button></div>
-            <div class="locked-wrapper"><button class="split-mode-btn locked-feature" data-split="5">5</button></div>
+                <button class="split-mode-btn active" data-split="2">2</button>
+                <button class="split-mode-btn" data-split="3">3</button>
+                <button class="split-mode-btn faded" data-split="4">4</button>
+                <button class="split-mode-btn faded" data-split="5">5</button>
+                <button class="split-mode-btn faded" data-split="6">6</button>
+                <button class="split-mode-btn faded" data-split="7">7</button>
+                <button class="split-mode-btn faded" data-split="8">8</button>
+                <button class="split-mode-btn faded" data-split="9">9</button>
+                <button class="split-mode-btn faded" data-split="10">10</button>
             </div>
         </div>
-
-        <div id="split-type-regex" class="split-sub-controls hidden">
-             </div>
+        <div id="split-type-regex" class="split-sub-controls hidden"></div>
       </div>
-
       <div class="split-grid-container">
         <div id="split-input-container" class="split-box input-box">
-          <div class="split-header">
-            <span>Văn bản gốc (Max 10k từ)</span>
-            <span id="split-input-word-count" class="badge">Words: 0</span>
-          </div>
+          <div class="split-header"><span>Văn bản gốc <span class="limit-label">(Max 10k từ)</span></span><span id="split-input-word-count" class="badge">Words: 0</span></div>
           <textarea id="split-input-text" class="custom-scrollbar" placeholder="Dán cả bộ truyện vào đây..."></textarea>
-          <div class="split-footer">
-            <button id="split-action-btn" class="btn btn-primary full-width">Thực Hiện Chia</button>
-          </div>
+          <div class="split-footer"><button id="split-action-btn" class="btn btn-primary full-width">Thực Hiện Chia</button></div>
         </div>
         <div id="split-outputs-wrapper" class="outputs-wrapper"></div>
       </div>
     </div>
-
   </main>
-  
   <div id="notification-container"></div>
   <script src="index.js"></script>
 </body>
