--- a/vip.html
+++ b/vip.html
@@ -2,7 +2,7 @@
 <html lang="vi">
 <head>
   <meta charset="UTF-8">
-  <title>Tiện Ích Trịnh Hg - VIP PREMIUM</title>
+  <title>Tiện Ích Trịnh Hg - VIP</title>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="index.css">
   <script>window.IS_VIP = true;</script>
@@ -11,10 +11,7 @@
   <header class="app-header">
     <div class="header-left">
       <h1>Tiện Ích Của Trịnh Hg (VIP)</h1>
-      <div class="donate-info">
-        <span class="donate-label">VIP ACCESS</span>
-        <span class="donate-details">CẢM ƠN BẠN ĐÃ ỦNG HỘ!</span>
-      </div>
+      <div class="donate-info"><span class="donate-label">VIP ACCESS</span><span class="donate-details">CẢM ƠN BẠN ĐÃ ỦNG HỘ!</span></div>
     </div>
     <div class="header-center">
       <nav class="tabs">
@@ -53,10 +50,7 @@
           </div>
         </div>
         <div class="advanced-settings">
-            <div class="setting-block">
-                <label>Ngoại lệ Auto Caps:</label>
-                <div class="input-with-btn"><input type="text" id="caps-exception" placeholder=""><button id="save-exception-btn" class="btn btn-modern btn-modern-primary">Lưu</button></div>
-            </div>
+            <div class="setting-block"><label>Ngoại lệ Auto Caps:</label><div class="input-with-btn"><input type="text" id="caps-exception"><button id="save-exception-btn" class="btn btn-modern btn-modern-primary">Lưu</button></div></div>
         </div>
         <div class="list-actions">
            <button id="add-pair" class="btn btn-action-green icon-btn">Thêm cặp mới</button>
@@ -80,7 +74,7 @@
         </div>
       </div>
     </div>
-    
+
     <div id="split" class="tab-content">
       <div class="split-controls-wrapper">
         <div class="split-mode-selector">
@@ -103,10 +97,7 @@
         </div>
         <div id="split-type-regex" class="split-sub-controls hidden">
             <label>Regex nhận diện:</label>
-            <div class="input-with-btn">
-                <input type="text" id="split-regex-input" value="^(Chương|Chapter|Hồi|Quyển)\s+(?:[\d]+|[IVXLCDM]+|[a-zA-Zà-ỹ]+)" placeholder="...">
-                <button id="clear-split-regex" class="btn btn-modern btn-modern-danger btn-sm">Xóa kết quả</button>
-            </div>
+            <div class="input-with-btn"><input type="text" id="split-regex-input" value="^(Chương|Chapter|Hồi|Quyển)\s+(?:[\d]+|[IVXLCDM]+|[a-zA-Zà-ỹ]+)"><button id="clear-split-regex" class="btn btn-modern btn-modern-danger btn-sm">Xóa kết quả</button></div>
         </div>
       </div>
       <div class="split-grid-container">
